--- a/WebConfSite/templates/home/index.html
+++ b/WebConfSite/templates/home/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html> 
 <html> 
+
+<head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <body> 
 
 <p> 
