--- a/WebConfSite/templates/sesspage.html
+++ b/WebConfSite/templates/sesspage.html
@@ -2,45 +2,147 @@
 <html> 
 
 <head>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
+{% load staticfiles %}
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="{% static 'sidebar.css' %}">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"> </script>
 <script type="text/javascript"> 
-  $(window).bind('beforeunload', function() {
-        //$( ".UserTrack" ).append( "{{myname}} Left" );
-    });
+  
+
 
   $( document ).ready(function() {    
-        //$( ".UserTrack" ).append( String(mkroom) );
+         $.ajax({
+            type: "GET",
+            async: false,
+            url: "/enter-session/",  
+            data: {
+                sessionname: '{{ sessname }}'
+            },
+            success: function(data) {
+            },
+            error: function(xhr, textStatus, errorThrown) {
+            }
+        });
     });
 
   var Pageusername = String("{{Pageusername}}");
 </script>
-
 </head>
 
 <body> 
 
+
+    <div id="wrapper">
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="/{{myuname|safe}}">{{myname}}</a>
+                </li>
+                <li>
+                    <a href="#">Invite Users to Room</a>
+                </li>
+                <li>
+                    <a href="#">-</a>
+                </li>
+                <li>
+                    <a href="#">-</a>
+                </li>
+                <li>
+                    <a href="#">-</a>
+                </li>
+                <li>
+                    <a href="/logout">Logout</a>
+                </li>
+
+            </ul>
+        </div>
+
+        <div id="page-content-wrapper">
+            <a class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+            <h3>User Search</h3>
+<input type="text" id="user-search"/>
+<button id="u-search-btn">Invite</button>
+<ul id="usersearchresults">
+</ul>
+
+<button id="setup-new-room">Initiate Conference</button>
+<table style="width: 100%;" id="rooms-list"></table>
+<div id="videos-container"></div>
+        </div>
+
+
+    </div>
+
 <p>
-<a href="/logout">Logout</a><br>
-<a href="/{{myuname|safe}}">{{myname}}</a><br>
-Welcome {{ username|safe }}
+<br>
+<br>
 </p>
 
 <script src="//cdn.webrtc-experiment.com/socket.io.js"> </script>
-{% load staticfiles %}<script type="text/javascript" src="{% static 'webrtc-stun.js' %}"></script>
-<script src="//cdn.webrtc-experiment.com/video-conferencing/conference.js"> </script>
-<script type="text/javascript" src="{% static 'conferencesetup.js' %}"></script>
-<button id="setup-new-room">Join Conference</button>
-<table style="width: 100%;" id="rooms-list"></table>
-<div id="videos-container"></div>
+<script type="text/javascript" src="{% static 'webrtc-stun.js' %}"> </script>
+<script type="text/javascript" src="{% static 'conference.js' %}"> </script>
+<script type="text/javascript" src="{% static 'conferencesetup.js' %}"> </script>
+
+
+
 
 
 <div class="UserTrack"></div>
 
 <script type="text/javascript"> 
-    $('#createSess').click(function(){
-        window.location.href = mkroom;
-   });
+
+    $("#u-search-btn").click( function(){
+    
+
+    });
+
+    $('#user-search').keyup(function(){
+     $.ajax({
+            type: "POST",
+            url: "/user-search/",  // or just url: "/my-url/path/"
+            //datatype: "json",
+            data: {
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                search_user: $('#user-search').val(),
+            },
+            success: function(data) {
+                $('#usersearchresults').html(data);
+            },
+            error: function(xhr, textStatus, errorThrown) {
+                alert("Error occurred");
+            }
+          });
+    });
+
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+
+
+     window.onbeforeunload = function(){
+
+      $.ajax({
+          type: "GET",
+          async: false,
+          url: "/leave-session/",  
+          data: {
+              sessionname: '{{ sessname }}'
+          },
+          success: function(data) {
+          },
+          error: function(xhr, textStatus, errorThrown) {
+          }
+      });
+
+    };
+
 </script>
 
 </body> 
