--- a/WebConfSite/templates/userpage.html
+++ b/WebConfSite/templates/userpage.html
@@ -11,7 +11,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="{% static 'sidebar.css' %}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="//cdn.webrtc-experiment.com/socket.io.js"></script>
 <script type="text/javascript"> 
 
    $(window).bind('beforeunload', function() {
@@ -25,6 +24,26 @@
                			.attr("name", "Psessname").val(mkroom);
 		    $('#createSess').append($(input));
     */
+
+          var interval = 8000;  // 5000 = 5 seconds
+          function doAjax() {
+              $.ajax({
+                      type: 'POST',
+                      url: '/getUIsessions/',
+                      data: {
+                            csrfmiddlewaretoken: '{{ csrf_token }}',
+                      },
+                      success: function (data) {
+                               $('#sessioninvitelist').html(data);   
+                      },
+                      complete: function (data) {
+                              // Schedule the next
+                              setTimeout(doAjax, interval);
+                      }
+              });
+          }
+          doAjax();
+          //setTimeout(doAjax, interval);
     });
 
    var username = String("{{myuname}}");
@@ -65,10 +84,26 @@
         </ul>
     </div>
 
-    <div id="page-content-wrapper">
+    {% if myuname == pageuname %}
+      <div id="page-content-wrapper">
+              <a class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+      </div>
+      
+      <div style="padding-left:20px">
+          <h4> Active Sessions Invited to: </h4>
+          <pre style="width:20%">
+            <ul id="sessioninvitelist"></ul>
+          </pre>
+      </div>
 
-    </div>
 
+    {% else %}
+      <div id="page-content-wrapper">
+              <a class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+      </div>
+
+
+    {% endif %}
 
 </div>
 
@@ -109,6 +144,11 @@
                   alert("Error occurred");
               }
           });
+    });
+
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
     });
 
 
